--- a/gettext-tools/misc/autopoint.in
+++ b/gettext-tools/misc/autopoint.in
@@ -173,6 +173,7 @@ Report bugs to <bug-gnu-gettext@gnu.org>."
 func_version ()
 {
   echo "$progname (GNU $package) $version"
+  echo "Uses a versions archive in @ARCHIVE_FORMAT@ format."
   echo "Copyright (C) 2002-2008 Free Software Foundation, Inc.
 License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
 This is free software: you are free to change and redistribute it.
@@ -304,46 +305,6 @@ case "$ver" in
     ;;
 esac
 
-# We distribute the many different versions of the files in a CVS repository.
-# This guarantees a good compression rate:
-#
-#   Including version    size in KB of
-#                       "du autopoint-files/archive"
-#      0.10.35                  240
-#      0.10.36                  428
-#      0.10.37                  436
-#      0.10.38                  488
-#      0.10.39                  500
-#      0.10.40                  528
-#      0.11                     720
-#      0.11.1                   740
-#      0.11.2                   748
-#      0.11.3                   804
-#      0.11.4                   864
-#      0.11.5                   880
-#      0.12                    1032
-#      0.12.1                  1032
-#      0.13                    1220
-#      0.13.1                  1236
-#      0.14                    1296
-#      0.14.1                  1300
-#      0.14.2                  1420
-#      0.14.3                  1428
-#      0.14.4                  1464
-#      0.14.5                  1508
-#      0.14.6                  1580
-#      0.15                    1760
-#      0.16                    1808
-#      0.16.1                  1812
-#      0.17                    2128
-#
-# The requirement that the user must have the CVS program available is not
-# a severe restrictions, because most of the people who use autopoint are
-# users of CVS.
-#
-# Check availability of the CVS program.
-(cvs -v) >/dev/null 2>/dev/null || func_fatal_error "cvs program not found"
-
 # Check in which directory config.rpath, mkinstalldirs etc. belong.
 auxdir=`cat "$configure_in" | grep '^AC_CONFIG_AUX_DIR' | sed -n -e 's/AC_CONFIG_AUX_DIR(\([^()]*\))/\1/p' | sed -e 's/^\[\(.*\)\]$/\1/' | sed -e 1q`
 if test -n "$auxdir"; then
@@ -403,25 +364,10 @@ if test -z "$podirs"; then
   podirs="po"
 fi
 
-# Set up a temporary CVS repository and a temporary checkout directory.
-# We need the temporary CVS repository because any checkout needs write
-# access to the CVSROOT/history file, so it cannot be under $gettext_dir.
-# We need the temporary checkout directory because when --force was not
-# given, we need to compare the existing files with the checked out ones.
+# Set up a temporary checkout directory.
 # Set variables
-# - cvs_dir         directory containing the temporary repository
 # - work_dir        directory containing the temporary checkout
-cvs_dir=tmpcvs$$
 work_dir=tmpwrk$$
-# Use an umask of 077, to avoid attacks that work by overwriting files in the
-# "$CVSROOT"/CVSROOT directory.
-(umask 077 && mkdir "$cvs_dir") || {
-  if test -d "$cvs_dir"; then
-    func_fatal_error "directory $cvs_dir already exists"
-  else
-    func_fatal_error "cannot create directory $cvs_dir"
-  fi
-}
 mkdir "$work_dir" || {
   if test -d "$work_dir"; then
     func_fatal_error "directory $work_dir already exists"
@@ -429,44 +375,136 @@ mkdir "$work_dir" || {
     func_fatal_error "cannot create directory $work_dir"
   fi
 }
-CVSROOT="$srcdir/$cvs_dir"
-export CVSROOT
-unset CVS_CLIENT_LOG
-unset CVS_CLIENT_PORT
-unset CVS_IGNORE_REMOTE_ROOT
-unset CVS_PASSFILE
-unset CVS_PASSWORD
-unset CVS_RCMD_PORT
-unset CVS_RSH
-unset CVS_SERVER
-unset CVS_SERVER_SLEEP
-unset CVSIGNORE
-unset CVSREAD
-unset CVSUMASK
-unset CVSWRAPPERS
 
-# Need to pass -d "$CVSROOT", because there may be a CVS directory in the
-# current directory.
-cvs -d "$CVSROOT" init
-gzip -d -c < "$gettext_dir/archive.cvs.tar.gz" | (cd "$cvs_dir" && tar xf -)
+# We support three archive formats.
+#
+# Format | Size (KiB) for gettext-0.17 | Extra tools needed |
+# -------+-----------------------------+--------------------+
+#  dir   |            3000             |         --         |
+#  cvs   |             356             |         cvs        |
+#  git   |             484             |         git        |
+# -------+-----------------------------+--------------------+
 
-cd "$work_dir"
-cvsver=gettext-`echo "$ver" | sed -e 's/\./_/g'`
-(cvs checkout -r"$cvsver" archive > /dev/null) 2>&1 | grep -v '^cvs checkout: Updating'
-find archive -name CVS -type d -print | xargs rm -rf
-# Check that really all CVS directories are gone, otherwise we would overwrite
-# the contents of the user's CVS directories.
-if test `find archive -name CVS -type d -print | wc -l` != 0; then
-  cd ..
-  rm -rf "$cvs_dir" "$work_dir"
-  func_fatal_error "failed to remove all CVS subdirectories"
-fi
-if test `find archive -type f -print | wc -l` = 0; then
-  cd ..
-  rm -rf "$cvs_dir" "$work_dir"
-  func_fatal_error "infrastructure files for version $ver not found; this is autopoint from GNU $package $version"
-fi
-cd ..
+case "@ARCHIVE_FORMAT@" in
+  dir)
+    # The archive of different versions is very large, but using it does not
+    # require special tools.
+    gzip -d -c < "$gettext_dir/archive.dir.tar.gz" | (cd "$work_dir" && tar xf - "gettext-$ver")
+    if test `find "$work_dir" -type f -print | wc -l` = 0; then
+      rm -rf "$work_dir"
+      func_fatal_error "infrastructure files for version $ver not found; this is autopoint from GNU $package $version"
+    fi
+    mv "$work_dir/gettext-$ver" "$work_dir/archive"
+    ;;
+
+  cvs)
+    # We distribute the many different versions of the files in a CVS
+    # repository. This guarantees a good compression rate:
+    #
+    #   Including version    size in KB of
+    #                       "du autopoint-files/archive"
+    #      0.10.35                  240
+    #      0.10.36                  428
+    #      0.10.37                  436
+    #      0.10.38                  488
+    #      0.10.39                  500
+    #      0.10.40                  528
+    #      0.11                     720
+    #      0.11.1                   740
+    #      0.11.2                   748
+    #      0.11.3                   804
+    #      0.11.4                   864
+    #      0.11.5                   880
+    #      0.12                    1032
+    #      0.12.1                  1032
+    #      0.13                    1220
+    #      0.13.1                  1236
+    #      0.14                    1296
+    #      0.14.1                  1300
+    #      0.14.2                  1420
+    #      0.14.3                  1428
+    #      0.14.4                  1464
+    #      0.14.5                  1508
+    #      0.14.6                  1580
+    #      0.15                    1760
+    #      0.16                    1808
+    #      0.16.1                  1812
+    #      0.17                    2128
+    #
+    # The requirement that the user must have the CVS program available is not
+    # a severe restrictions, because most of the people who use autopoint are
+    # users of CVS.
+    #
+    # Check availability of the CVS program.
+    (cvs -v) >/dev/null 2>/dev/null || func_fatal_error "cvs program not found"
+
+    # Set up a temporary CVS repository.
+    # We need the temporary CVS repository because any checkout needs write
+    # access to the CVSROOT/history file, so it cannot be under $gettext_dir.
+    # We need the temporary checkout directory because when --force was not
+    # given, we need to compare the existing files with the checked out ones.
+    # Set variables
+    # - cvs_dir         directory containing the temporary repository
+    cvs_dir=tmpcvs$$
+    # Use an umask of 077, to avoid attacks that work by overwriting files in
+    # the "$CVSROOT"/CVSROOT directory.
+    (umask 077 && mkdir "$cvs_dir") || {
+      if test -d "$cvs_dir"; then
+        func_fatal_error "directory $cvs_dir already exists"
+      else
+        func_fatal_error "cannot create directory $cvs_dir"
+      fi
+    }
+    CVSROOT="$srcdir/$cvs_dir"
+    unset CVS_CLIENT_LOG
+    unset CVS_CLIENT_PORT
+    unset CVS_IGNORE_REMOTE_ROOT
+    unset CVS_PASSFILE
+    unset CVS_PASSWORD
+    unset CVS_RCMD_PORT
+    unset CVS_RSH
+    unset CVS_SERVER
+    unset CVS_SERVER_SLEEP
+    unset CVSIGNORE
+    unset CVSREAD
+    unset CVSUMASK
+    unset CVSWRAPPERS
+
+    # Need to pass -d "$CVSROOT", because there may be a CVS directory in the
+    # current directory.
+    cvs -d "$CVSROOT" init
+    gzip -d -c < "$gettext_dir/archive.cvs.tar.gz" | (cd "$cvs_dir" && tar xf -)
+
+    cd "$work_dir"
+    cvsver=gettext-`echo "$ver" | sed -e 's/\./_/g'`
+    (cvs -d "$CVSROOT" checkout -r"$cvsver" archive > /dev/null) 2>&1 | grep -v '^cvs checkout: Updating'
+    find archive -name CVS -type d -print | xargs rm -rf
+    cd ..
+    rm -rf "$cvs_dir"
+    # Check that really all CVS directories are gone, otherwise we would overwrite
+    # the contents of the user's CVS directories.
+    if test `find $work_dir/archive -name CVS -type d -print | wc -l` != 0; then
+      rm -rf "$work_dir"
+      func_fatal_error "failed to remove all CVS subdirectories"
+    fi
+    if test `find $work_dir/archive -type f -print | wc -l` = 0; then
+      rm -rf "$work_dir"
+      func_fatal_error "infrastructure files for version $ver not found; this is autopoint from GNU $package $version"
+    fi
+    ;;
+
+  git)
+    # Check availability of the git program.
+    (git --version) >/dev/null 2>/dev/null || func_fatal_error "git program not found"
+    mkdir "$work_dir/archive"
+    gzip -d -c < "$gettext_dir/archive.git.tar.gz" | (cd "$work_dir/archive" && tar xf -)
+    (cd "$work_dir/archive" && git checkout -q "gettext-$ver") || {
+      rm -rf "$work_dir"
+      func_fatal_error "infrastructure files for version $ver not found; this is autopoint from GNU $package $version"
+    }
+    (cd "$work_dir/archive" && rm -rf .git .gitignore)
+    ;;
+esac
 
 # func_destfile file
 # determines the destination file, relative to the package's top level
@@ -572,7 +610,7 @@ if test -z "$force"; then
     fi
   done
   if test -n "$mismatch"; then
-    rm -rf "$cvs_dir" "$work_dir"
+    rm -rf "$work_dir"
     func_fatal_error "Some files have been locally modified. Not overwriting them because --force has not been specified. For your convenience, you find the local modifications in the file '$mismatchfile'."
   fi
   rm -rf "$tmp"
@@ -657,5 +695,5 @@ for file in `find "$work_dir/archive" -type f -print | sed -e "s,^$work_dir/arch
 done
 
 # That's it.
-rm -rf "$cvs_dir" "$work_dir"
+rm -rf "$work_dir"
 exit 0
