--- a/gettext-tools/misc/Makefile.am
+++ b/gettext-tools/misc/Makefile.am
@@ -18,6 +18,7 @@
 
 AUTOMAKE_OPTIONS = 1.2 gnits
 EXTRA_DIST =
+CLEANFILES =
 DISTCLEANFILES =
 
 
@@ -25,12 +26,14 @@ DISTCLEANFILES =
 
 bin_SCRIPTS = gettextize autopoint
 
-DISTCLEANFILES += gettextize autopoint
+DISTCLEANFILES += gettextize autopoint convert-archive
+
+CLEANFILES += archive.dir.tar.gz archive.git.tar.gz
 
 EXTRA_DIST += add-to-archive cvsuser.c archive.cvs.tar.gz
 
 gettextsrcdir = $(datadir)/gettext
-gettextsrc_DATA = archive.cvs.tar.gz
+gettextsrc_DATA = archive.@ARCHIVE_FORMAT@.tar.gz
 
 # The archive.cvs.tar.gz is not in the CVS. Alpha-testers must use the one from
 # an already installed release.
@@ -41,6 +44,24 @@ archive.cvs.tar.gz:
 	  echo "archive.cvs.tar.gz is not under version control. Please copy the archive.cvs.tar.gz from an already installed release to gettext-tools/misc/." 1>&2; \
 	  exit 1; \
 	fi
+
+# The archive.dir.tar.gz is generated from archive.cvs.tar.gz.
+archive.dir.tar.gz: archive.cvs.tar.gz
+	if test -f archive.cvs.tar.gz; then \
+	  inputfile=archive.cvs.tar.gz; \
+	else \
+	  inputfile='$(srcdir)'/archive.cvs.tar.gz; \
+	fi; \
+	./convert-archive cvs dir "$$inputfile" $@
+
+# The archive.git.tar.gz is generated from archive.cvs.tar.gz.
+archive.git.tar.gz: archive.cvs.tar.gz
+	if test -f archive.cvs.tar.gz; then \
+	  inputfile=archive.cvs.tar.gz; \
+	else \
+	  inputfile='$(srcdir)'/archive.cvs.tar.gz; \
+	fi; \
+	./convert-archive cvs git "$$inputfile" $@
 
 # Emacs Lisp code.
 
