--- a/gettext-tools/m4/Makefile.am
+++ b/gettext-tools/m4/Makefile.am
@@ -8,6 +8,7 @@ aclocal_DATA = \
   ../../autoconf-lib-link/m4/lib-link.m4 \
   ../../autoconf-lib-link/m4/lib-prefix.m4 \
   ../../gettext-runtime/m4/codeset.m4 \
+  ../../gettext-runtime/m4/fcntl_h.m4 \
   ../../gettext-runtime/m4/gettext.m4 \
   ../../gettext-runtime/m4/glibc2.m4 \
   ../../gettext-runtime/m4/glibc21.m4 \
