Update after gnulib changed.

--- a/gettext-tools/gnulib-tests/.gitignore
+++ b/gettext-tools/gnulib-tests/.gitignore
@@ -11,16 +11,23 @@
 /Makefile.gnulib
 /close-hook.c
 /close-hook.h
+/getpagesize.c
 /hash-pjw.c
 /hash-pjw.h
 /imaxtostr.c
+/init.sh
 /inttostr.c
 /inttostr.h
 /offtostr.c
+/putenv.c
 /read-file.c
 /read-file.h
+/same-inode.h
+/symlink.c
 /test-alignof.c
 /test-alloca-opt.c
+/test-areadlink.c
+/test-areadlink.h
 /test-argmatch.c
 /test-array_list.c
 /test-atexit.c
@@ -36,18 +43,22 @@
 /test-c-strstr.c
 /test-canonicalize-lgpl.c
 /test-canonicalize-lgpl.sh
+/test-cloexec.c
 /test-copy-acl.c
 /test-copy-acl.sh
 /test-copy-file.c
 /test-copy-file.sh
+/test-dup-safer.c
 /test-dup2.c
 /test-environ.c
 /test-errno.c
 /test-fcntl.c
+/test-fcntl-h.c
 /test-file-has-acl.c
 /test-file-has-acl.sh
 /test-fnmatch.c
 /test-fopen.c
+/test-fopen.h
 /test-fstrcmp.c
 /test-getdelim.c
 /test-getdtablesize.c
@@ -62,6 +73,7 @@
 /test-localename.c
 /test-lock.c
 /test-lstat.c
+/test-lstat.h
 /test-malloca.c
 /test-mbrtowc.c
 /test-mbrtowc1.sh
@@ -93,6 +105,7 @@
 /test-moo-sub2.oo.c
 /test-moo-sub2.oo.h
 /test-open.c
+/test-open.h
 /test-pipe-filter-ii1.c
 /test-pipe-filter-ii1.sh
 /test-pipe-filter-ii2-child.c
@@ -102,6 +115,7 @@
 /test-pipe-filter.sh
 /test-pipe.c
 /test-pipe.sh
+/test-pipe2.c
 /test-posix_spawn1.c
 /test-posix_spawn1.in.sh
 /test-posix_spawn2.c
@@ -110,15 +124,22 @@
 /test-quotearg.sh
 /test-rawmemchr.c
 /test-read-file.c
+/test-readlink.c
+/test-readlink.h
+/test-rmdir.c
+/test-rmdir.h
 /test-sameacls.c
 /test-sched.c
 /test-set-mode-acl.c
 /test-set-mode-acl.sh
+/test-setenv.c
 /test-sigaction.c
 /test-signal.c
 /test-sigpipe.c
 /test-sigpipe.sh
 /test-snprintf.c
+/test-stat.c
+/test-stat.h
 /test-stdbool.c
 /test-stddef.c
 /test-stdint.c
@@ -131,6 +152,8 @@
 /test-striconveha.c
 /test-string.c
 /test-strstr.c
+/test-symlink.c
+/test-symlink.h
 /test-sys_select.c
 /test-sys_socket.c
 /test-sys_stat.c
@@ -152,8 +175,10 @@
 /test-term-ostream-xterm-solaris10.out
 /test-term-ostream-xterm-xf86-v32.out
 /test-term-ostream.c
+/test-time.c
 /test-tls.c
 /test-unistd.c
+/test-unsetenv.c
 /test-vasnprintf-posix.c
 /test-vasnprintf.c
 /test-vasprintf.c
@@ -161,6 +186,8 @@
 /test-wchar.c
 /test-wctype.c
 /test-wcwidth.c
+/test-xalloc-die.c
+/test-xalloc-die.sh
 /test-xvasprintf.c
 /uinttostr.c
 /umaxtostr.c
