Update after gnulib changed.

--- a/build-aux/.gitignore
+++ b/build-aux/.gitignore
@@ -11,6 +11,7 @@
 /moopp
 /reloc-ldflags
 /relocatable.sh.in
+/unused-parameter.h
 
 # Files brought in by "automake --add-missing --copy":
 /compile
