--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -221,15 +221,15 @@ gettext_4_prg_LDADD = ../gnulib-lib/libgettextlib.la $(LDADD)
 gettext_5_prg_SOURCES = gettext-5-prg.c
 gettext_5_prg_LDADD = ../gnulib-lib/libgettextlib.la $(LDADD)
 gettext_6_prg_SOURCES = gettext-6-prg.c
-gettext_6_prg_CFLAGS = $(gettext_6_prg_CFLAGS_@GLIBC2@)
-gettext_6_prg_CFLAGS_yes = -DUSE_POSIX_THREADS
-gettext_6_prg_LDADD = $(gettext_6_prg_LDADD_@GLIBC2@)
-gettext_6_prg_LDADD_yes = ../gnulib-lib/libgettextlib.la $(LDADD) -lpthread
+gettext_6_prg_CFLAGS = $(gettext_6_prg_CFLAGS_@HAVE_NEWLOCALE@)
+gettext_6_prg_CFLAGS_1 = -DUSE_POSIX_THREADS
+gettext_6_prg_LDADD = $(gettext_6_prg_LDADD_@HAVE_NEWLOCALE@)
+gettext_6_prg_LDADD_1 = $(LDADD) -lpthread
 gettext_7_prg_SOURCES = gettext-7-prg.c
-gettext_7_prg_CFLAGS = $(gettext_7_prg_CFLAGS_@GLIBC2@)
-gettext_7_prg_CFLAGS_yes = -DUSE_POSIX_THREADS
-gettext_7_prg_LDADD = $(gettext_7_prg_LDADD_@GLIBC2@)
-gettext_7_prg_LDADD_yes = ../gnulib-lib/libgettextlib.la $(LDADD) -lpthread
+gettext_7_prg_CFLAGS = $(gettext_7_prg_CFLAGS_@HAVE_NEWLOCALE@)
+gettext_7_prg_CFLAGS_1 = -DUSE_POSIX_THREADS
+gettext_7_prg_LDADD = $(gettext_7_prg_LDADD_@HAVE_NEWLOCALE@)
+gettext_7_prg_LDADD_1 = $(LDADD) -lpthread
 gettext_8_prg_SOURCES = gettext-8-prg.c
 gettext_8_prg_LDADD = ../gnulib-lib/libgettextlib.la $(LDADD)
 cake_SOURCES = plural-1-prg.c setlocale.c
