--- a/gettext-tools/examples/Makefile.am
+++ b/gettext-tools/examples/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-tools/examples subdirectory of GNU gettext
-## Copyright (C) 2001-2007, 2009 Free Software Foundation, Inc.
+## Copyright (C) 2001-2007, 2009-2010 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -395,6 +395,7 @@ EXAMPLESPOFILES = \
   LINGUAS \
   af.po \
   ast.po \
+  bg.po \
   ca.po \
   de.po \
   el.po \
