Move autoconf-lib-link unit tests to gnulib.

--- a/autoconf-lib-link/configure.ac
+++ b/autoconf-lib-link/configure.ac
@@ -1,5 +1,5 @@
 dnl Configuration for the autoconf-lib-link directory of GNU gettext
-dnl Copyright (C) 1995-1999, 2000-2003, 2005-2006, 2008-2009 Free Software Foundation, Inc.
+dnl Copyright (C) 1995-1999, 2000-2003, 2005-2006, 2008-2010 Free Software Foundation, Inc.
 dnl
 dnl This program is free software: you can redistribute it and/or modify
 dnl it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.57])
 AC_INIT
-AC_CONFIG_SRCDIR([tests/rpath-1a])
+AC_CONFIG_SRCDIR([m4/lib-link.m4])
 AC_CONFIG_AUX_DIR([../build-aux])
 . $srcdir/../version.sh
 gl_INIT_PACKAGE([autoconf-lib-link], [$VERSION_NUMBER])
@@ -49,23 +49,11 @@ dnl Checks for typedefs, structures, and compiler characteristics.
 
 dnl Checks for library functions.
 
-dnl Checks for tests/rpathcfg.
-AC_SUBST([GCC])
-AC_SUBST([LD])
-AC_SUBST([with_gnu_ld])
-
 aclocaldir='${datadir}/aclocal'
 AC_SUBST([aclocaldir])
 
-AC_LIB_PREPARE_MULTILIB
-LIBDIRSTEM=$acl_libdirstem
-AC_SUBST([LIBDIRSTEM])
-
-AC_CONFIG_FILES([Makefile],
-                [FIX_MAKEFILE_DISTRIB])
+AC_CONFIG_FILES([Makefile])
 
 AC_CONFIG_FILES([m4/Makefile])
-
-AC_CONFIG_FILES([tests/Makefile])
 
 AC_OUTPUT
