--- a/gettext-runtime/intl/Makefile.in
+++ b/gettext-runtime/intl/Makefile.in
@@ -1,5 +1,5 @@
 # Makefile for directory with message catalog handling library of GNU gettext
-# Copyright (C) 1995-1998, 2000-2007, 2009 Free Software Foundation, Inc.
+# Copyright (C) 1995-1998, 2000-2007, 2009-2010 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify it
 # under the terms of the GNU Library General Public License as published
@@ -231,9 +231,9 @@ libintl.la libgnuintl.la: $(OBJECTS) $(OBJECTS_RES_@WOE32@)
 # according to the libtool documentation, section "Library interface versions".
 # Maintainers of other packages that include the intl directory must *not*
 # change these values.
-LTV_CURRENT=8
-LTV_REVISION=2
-LTV_AGE=0
+LTV_CURRENT=9
+LTV_REVISION=0
+LTV_AGE=1
 
 .SUFFIXES:
 .SUFFIXES: .c .y .o .lo .sin .sed
